ci: consolidate yaml files
